# gd32w51x-demo-suites-cmake-vscode

./: .gitmodules  README.md
Drivers/BSP/GD32W515P_EVAL/: gd32w515p_eval.c  gd32w515p_eval.h
Drivers/GD32W51x_standard_peripheral/Include/: gd32w51x_adc.h  gd32w51x_cau.h  gd32w51x_crc.h  gd32w51x_dbg.h  gd32w51x_dci.h  gd32w51x_dma.h  gd32w51x_efuse.h  gd32w51x_exti.h  gd32w51x_fmc.h  gd32w51x_fwdgt.h  gd32w51x_gpio.h  gd32w51x_hau.h  gd32w51x_hpdf.h  gd32w51x_i2c.h  gd32w51x_icache.h  gd32w51x_misc.h  gd32w51x_pkcau.h  gd32w51x_pmu.h  gd32w51x_qspi.h  gd32w51x_rcu.h  gd32w51x_rtc.h  gd32w51x_sdio.h  gd32w51x_spi.h  gd32w51x_sqpi.h  gd32w51x_syscfg.h  gd32w51x_timer.h  gd32w51x_trng.h  gd32w51x_tsi.h  gd32w51x_tzpcu.h  gd32w51x_usart.h  gd32w51x_wwdgt.h
Drivers/GD32W51x_standard_peripheral/Source/: gd32w51x_adc.c  gd32w51x_cau.c  gd32w51x_cau_aes.c  gd32w51x_cau_des.c  gd32w51x_cau_tdes.c  gd32w51x_crc.c  gd32w51x_dbg.c  gd32w51x_dci.c  gd32w51x_dma.c  gd32w51x_efuse.c  gd32w51x_exti.c  gd32w51x_fmc.c  gd32w51x_fwdgt.c  gd32w51x_gpio.c  gd32w51x_hau.c  gd32w51x_hau_sha_md5.c  gd32w51x_hpdf.c  gd32w51x_i2c.c  gd32w51x_icache.c  gd32w51x_misc.c  gd32w51x_pkcau.c  gd32w51x_pmu.c  gd32w51x_qspi.c  gd32w51x_rcu.c  gd32w51x_rtc.c  gd32w51x_sdio.c  gd32w51x_spi.c  gd32w51x_sqpi.c  gd32w51x_syscfg.c  gd32w51x_timer.c  gd32w51x_trng.c  gd32w51x_tsi.c  gd32w51x_tzpcu.c  gd32w51x_usart.c  gd32w51x_wwdgt.c
Drivers/GD32W51x_usbfs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Drivers/GD32W51x_usbfs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Drivers/GD32W51x_usbfs_library/ustd/common/: usb_ch9_std.h
Projects/GD32W515P_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32W515P_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32W515P_EVAL/02_GPIO_Key_Polling_mode/cmake/: project.cmake
Projects/GD32W515P_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32W515P_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32W515P_EVAL/05_USART_Echo_Interrupt_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32W515P_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32W515P_EVAL/07_ADC_conversion_triggered_by_timer/Application/: readme.txt
Projects/GD32W515P_EVAL/08_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32W515P_EVAL/08_I2C_EEPROM/Application/Core/Inc/: gd32w51x_it.h  gd32w51x_libopt.h  systick.h
Projects/GD32W515P_EVAL/08_I2C_EEPROM/Application/Core/Src/: gd32w51x_it.c  main.c  systick.c
Projects/GD32W515P_EVAL/08_I2C_EEPROM/Application/Soft_Drive/: at24cxx.c  at24cxx.h  i2c.c  i2c.h
Projects/GD32W515P_EVAL/09_HPDF_I2S_Audio/Application/: readme.txt
Projects/GD32W515P_EVAL/09_HPDF_I2S_Audio/cmake/: project.cmake
Projects/GD32W515P_EVAL/10_SPI_LCD/Application/: CMakeLists.txt  readme.txt
Projects/GD32W515P_EVAL/10_SPI_LCD/cmake/: arm-none-eabi-gcc.cmake
Projects/GD32W515P_EVAL/11_SDIO_SDCard/Application/: CMakeLists.txt  readme.txt
Projects/GD32W515P_EVAL/12_TRNG_Get_Random/: CMakeLists.txt
Projects/GD32W515P_EVAL/12_TRNG_Get_Random/Application/: readme.txt
Projects/GD32W515P_EVAL/13_CAU/Application/: Expected_Results.txt  readme.txt
Projects/GD32W515P_EVAL/13_CAU/Drivers/GD32W51x_standard_peripheral/: CMakeLists.txt
Projects/GD32W515P_EVAL/14_HAU/: gd32w51x_flash.ld
Projects/GD32W515P_EVAL/14_HAU/Application/: CMakeLists.txt  readme.txt
Projects/GD32W515P_EVAL/15_PKCAU_Modular_Addition_Interrupt/Application/: readme.txt
Projects/GD32W515P_EVAL/16_RCU_Clock_Out/: gd32w51x_flash.ld
Projects/GD32W515P_EVAL/16_RCU_Clock_Out/Application/: readme.txt
Projects/GD32W515P_EVAL/16_RCU_Clock_Out/cmake/: project.cmake
Projects/GD32W515P_EVAL/17_PMU_sleep_wakeup/Application/: readme.txt
Projects/GD32W515P_EVAL/18_RTC_Calendar/: CMakeLists.txt
Projects/GD32W515P_EVAL/18_RTC_Calendar/Application/: readme.txt
Projects/GD32W515P_EVAL/21_TIMER_Breath_LED/: gd32w51x_flash.ld
Projects/GD32W515P_EVAL/22_USBFS_USB_Device_CDC_ACM/: CMakeLists.txt
Projects/GD32W515P_EVAL/22_USBFS_USB_Device_CDC_ACM/Drivers/GD32W51x_usbfs_library/: CMakeLists.txt
Projects/GD32W515P_EVAL/22_USBFS_USB_Device_HID_Keyboard/: CMakePresets.json
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_HID_Host/: .clang-format  vcpkg-configuration.json
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_HID_Host/Drivers/GD32W51x_usbfs_library/: CMakeLists.txt
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_MSC_Host/: CMakeLists.txt
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_MSC_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_MSC_Host/Application/Core/Inc/: gd32w51x_it.h  usb_conf.h  usbh_conf.h  usbh_usr.h
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_MSC_Host/Application/Core/Src/: gd32w51x_it.c  gd32w51x_usb_hw.c  main.c  usbh_usr.c
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_MSC_Host/Drivers/BSP/GD32W515P_EVAL/: CMakeLists.txt
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_MSC_Host/Drivers/GD32W51x_usbfs_library/: CMakeLists.txt
Projects/GD32W515P_EVAL/22_USBFS_USB_Host_MSC_Host/Middlewares/FatFs/: CMakeLists.txt
Projects/GD32W515P_EVAL/23_Trustzone_1_Secure_Code/: gd32w51x_trustzone_secure_flash.ld
Projects/GD32W515P_EVAL/23_Trustzone_1_Secure_Code/Application/: CMakeLists.txt
Projects/GD32W515P_EVAL/23_Trustzone_1_Secure_Code/Application/Core/Inc/: gd32w51x_it.h  main.h  partition_gd32w51x.h
Projects/GD32W515P_EVAL/23_Trustzone_1_Secure_Code/Application/Core/Src/: gd32w51x_it.c  main.c  systick.c
Projects/GD32W515P_EVAL/23_Trustzone_2_NSecure_Code/: gd32w51x_trustzone_nsecure_flash.ld
Projects/GD32W515P_EVAL/23_Trustzone_2_NSecure_Code/Application/: CMakeLists.txt  gd32w51x_flash_ns.icf  readme.txt
Projects/GD32W515P_EVAL/23_Trustzone_2_NSecure_Code/Application/Core/Inc/: gd32w51x_it.h  main.h
Projects/GD32W515P_EVAL/23_Trustzone_2_NSecure_Code/Application/Core/Src/: gd32w51x_it.c  main.c  systick.c
(+165 files in other folders)
